--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name": "muriloamaral/Middleware",
-	"description": "Creates Middleware layer on Zend Framework 2.",
+	"name": "muriloamaral/middleware",
+	"description": "Creates middleware layer on Zend Framework 2.",
 	"type": "library",
 	"keywords": ["zf2", "zendframework", "zendframework2", "module", "middleware"],
 	"homepage": "https://github.com/muriloacs/Middleware",
